Add one more controller test and change swagger models
