# docs/swagger.json
@@ -40,25 +40,25 @@
                     "200": {
                         "description": "Get user by ID",
                         "schema": {
-                            "$ref": "#/definitions/swagger.UserByIDResponseSwagger"
+                            "$ref": "#/definitions/model.UserByIDResponseSwagger"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/swagger.StatusBadRequest"
+                            "$ref": "#/definitions/model.BadRequestResponse"
                         }
                     },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
-                            "$ref": "#/definitions/swagger.StatusForbidden"
+                            "$ref": "#/definitions/model.ForbiddenResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/swagger.StatusInternalError"
+                            "$ref": "#/definitions/model.InternalErrorResponse"
                         }
                     }
                 }
@@ -66,12 +66,28 @@
         }
     },
     "definitions": {
-        "swagger.StatusBadRequest": {
+        "model.BadRequestResponse": {
             "type": "object",
             "properties": {
                 "code": {
                     "type": "string",
                     "example": "BAD_REQUEST"
+                },
+                "errors": {
+                    "type": "array",
+                    "items": {
+                        "type": "object",
+                        "properties": {
+                            "field": {
+                                "type": "string",
+                                "example": "name"
+                            },
+                            "message": {
+                                "type": "string",
+                                "example": "Name is required"
+                            }
+                        }
+                    }
                 },
                 "message": {
                     "type": "string",
@@ -79,7 +95,7 @@
                 }
             }
         },
-        "swagger.StatusForbidden": {
+        "model.ForbiddenResponse": {
             "type": "object",
             "properties": {
                 "code": {
@@ -92,7 +108,7 @@
                 }
             }
         },
-        "swagger.StatusInternalError": {
+        "model.InternalErrorResponse": {
             "type": "object",
             "properties": {
                 "code": {
@@ -105,15 +121,15 @@
                 }
             }
         },
-        "swagger.UserByIDResponseSwagger": {
+        "model.UserByIDResponseSwagger": {
             "type": "object",
             "properties": {
                 "user": {
-                    "$ref": "#/definitions/swagger.UserSwagger"
+                    "$ref": "#/definitions/model.UserSwagger"
                 }
             }
         },
-        "swagger.UserSwagger": {
+        "model.UserSwagger": {
             "type": "object",
             "properties": {
                 "created_at": {
