# model/bad_request_response.go
@@ -1,10 +1,10 @@
 package model
 
-type BadRequestWithValidationErrorsResponse struct {
-	Message string `json:"message"`
-	Code    string `json:"code"`
+type BadRequestResponse struct {
+	Message string `json:"message" example:"Bad request"`
+	Code    string `json:"code" example:"BAD_REQUEST"`
 	Errors  []struct {
-		Field   string `json:"field"`
-		Message string `json:"message"`
+		Field   string `json:"field" example:"name"`
+		Message string `json:"message" example:"Name is required"`
 	} `json:"errors"`
 }
