# model/forbidden_response.go
@@ -1,6 +1,6 @@
-package swagger
+package model
 
-type StatusForbidden struct {
+type ForbiddenResponse struct {
 	Message string `json:"message" example:"You don't have permission to access this resource"`
 	Code    string `json:"code" example:"FORBIDDEN"`
 }
