# model/internal_error_response.go
@@ -1,6 +1,6 @@
-package swagger
+package model
 
-type StatusInternalError struct {
+type InternalErrorResponse struct {
 	Message string `json:"message" example:"Internal server error"`
 	Code    string `json:"code" example:"INTERNAL_ERROR"`
 }
